# real-state-prices

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  images.dvc  model  pyproject.toml
.dvc/: config
config/: main.yaml  process.yaml
config/model/: lgbm-reg.yaml  xgb-reg.yaml
config/process/: process_1.yaml
data/: finalX.parquet  finaly.parquet  processedproperties_processed.parquet  raw.dvc
data/processed/: bh_properties.parquet  pa_properties.parquet  properties.parquet  rj_properties.parquet  sp_properties.parquet
data/raw/: bh_properties.json  pa_properties.json  rj_properties.json  sp_properties.json
data_scraping/data_scraping/: items.py  middlewares.py  pipelines.py  settings.py
data_scraping/data_scraping/spiders/: bh_spider.py  pa_spider.py  rj_spider.py  sp_spider.py
mlruns/0/: meta.yaml
mlruns/127844767510165628/: meta.yaml
mlruns/127844767510165628/16903e7dcf3d4efc9058902318de0a7c/: meta.yaml
mlruns/127844767510165628/16903e7dcf3d4efc9058902318de0a7c/metrics/: MAE  RMSE  R²
mlruns/127844767510165628/16903e7dcf3d4efc9058902318de0a7c/tags/: mlflow.log-model.history
mlruns/127844767510165628/176c2bb8e5b849ffa65ab0457f5bbe0c/: meta.yaml
mlruns/127844767510165628/176c2bb8e5b849ffa65ab0457f5bbe0c/metrics/: MAE  RMSE  R²
mlruns/127844767510165628/176c2bb8e5b849ffa65ab0457f5bbe0c/tags/: mlflow.log-model.history
mlruns/127844767510165628/325513a6918c4d0bb869c90a3ee2e0e0/: meta.yaml
mlruns/127844767510165628/325513a6918c4d0bb869c90a3ee2e0e0/tags/: mlflow.source.git.commit
mlruns/127844767510165628/4859b08282914f62aed6a90d8803fc7a/: meta.yaml
mlruns/127844767510165628/4859b08282914f62aed6a90d8803fc7a/metrics/: MAE  RMSE  R²
mlruns/127844767510165628/4859b08282914f62aed6a90d8803fc7a/tags/: mlflow.log-model.history
mlruns/127844767510165628/504680bb6c0043b1b01d3866495f0e5e/: meta.yaml
mlruns/127844767510165628/648fb7da76244c1ab238e1fa3ef4ae4f/: meta.yaml
mlruns/127844767510165628/80f7c16d6bfc48e58d54134b9329dff4/: meta.yaml
mlruns/127844767510165628/80f7c16d6bfc48e58d54134b9329dff4/tags/: mlflow.source.name
mlruns/127844767510165628/bc7bd5a131c640c5876bbb8c822d8273/: meta.yaml
mlruns/127844767510165628/bc7bd5a131c640c5876bbb8c822d8273/metrics/: MAE  RMSE  R²
mlruns/127844767510165628/bc7bd5a131c640c5876bbb8c822d8273/tags/: mlflow.log-model.history
mlruns/127844767510165628/f68c6b86c427499bafa3ca4935f0507b/: meta.yaml
mlruns/127844767510165628/f68c6b86c427499bafa3ca4935f0507b/metrics/: MAE  RMSE  R²
mlruns/127844767510165628/f68c6b86c427499bafa3ca4935f0507b/tags/: mlflow.log-model.history
mlruns/127844767510165628/f7ae11af8caa4fac91b6576c816a43b4/: meta.yaml
mlruns/127844767510165628/f7ae11af8caa4fac91b6576c816a43b4/metrics/: MAE  RMSE  R²
mlruns/127844767510165628/f7ae11af8caa4fac91b6576c816a43b4/tags/: mlflow.log-model.history
mlruns/127844767510165628/fd3cb4506558407a908a83ec76f7d755/: meta.yaml
mlruns/127844767510165628/fd3cb4506558407a908a83ec76f7d755/metrics/: MAE  RMSE  R²
mlruns/127844767510165628/fd3cb4506558407a908a83ec76f7d755/tags/: mlflow.log-model.history
mlruns/127844767510165628/ff0c25158e8b43d0b235bf5381fd0380/: meta.yaml
mlruns/127844767510165628/ff0c25158e8b43d0b235bf5381fd0380/metrics/: MAE  RMSE  R²
mlruns/127844767510165628/ff0c25158e8b43d0b235bf5381fd0380/tags/: mlflow.log-model.history
notebooks/: ELT.ipynb  pipeline.ipynb
notebooks/mlruns/.trash/718610217313837460/: meta.yaml
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/967907677827320025/: meta.yaml
src/: app.py  bento_app.py  bentofile.yaml  config.py  process.py  train_model.py
(+289 files in other folders)
