[tool.poetry]
name = "real-state-prices"
version = "0.1.0"
description = "Application for real state price prediction in São Pauo(SP)-BR"
license = "MIT"
authors = ["Lucas NG <garci"]

[tool.poetry.dependencies]
python = "^3.8"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.11.1"
mlem = "^0.2.9"
duckdb = "^0.5.1"
dagshub = "^0.1.8"
mlflow = "^1.30.0"
bentoml = "^1.0.7"
dvc = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
