[tool.poetry]
name = "real-state-prices"
version = "0.1.0"
description = "Application for real state price prediction in São Pauo(SP)-BR"
license = "MIT"
authors = ["Lucas NG <garcia@outlook.com"]

[tool.poetry.dependencies]
python = "^3.8"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
mlem = "^0.2.9"
dagshub = "^0.1.8"
mlflow = "^1.30.0"
bentoml = "^1.0.7"
dvc = "^2.31.0"
scrapy = "^2.7.1"
scrapy-playwright = "^0.0.22"
duckdb = "^0.6.0"
pyarrow = "^10.0.1"
jupyterlab = "^3.5.0"
duckdb-engine = "^0.6.5"
polars = "^0.15.1"
rise = "^5.7.1"
jupyter-nbextensions-configurator = "^0.6.1"
ipywidgets = "^8.0.3"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
